@@ -117,6 +117,7 @@ token_parser_textos_indices tpti_funciones[]={
 
 	{TPI_F_PEEK,"PEEK("},
 	{TPI_F_PEEKW,"PEEKW("},
+    {TPI_F_FPEEK,"FPEEK("},
 	{TPI_F_IN,"IN("},
 	{TPI_F_NOT,"NOT("},
 
@@ -1579,6 +1580,10 @@ int exp_par_calculate_funcion(int valor,enum token_parser_tipo tipo,enum token_p
 
                     case TPI_F_PEEKW:
         				return peek_byte_z80_moto(valor)+256*peek_byte_z80_moto(valor+1);
+                    break;
+
+                    case TPI_F_FPEEK:
+        				return far_peek_byte(valor);
                     break;
                     
                     case TPI_F_IN:
