@@ -194,6 +194,7 @@ enum token_parser_indice {
 
 	TPI_F_PEEK,
 	TPI_F_PEEKW,
+    TPI_F_FPEEK,
 	TPI_F_IN,
 	TPI_F_NOT,
 	TPI_F_ABS,
